visual design changes

--- a/web/index.html
+++ b/web/index.html
@@ -45,7 +45,32 @@
 				</div>
 			</div>
 		<div class="row">
+			<div class="well well-lg footer">
+				<div class="col-md-5">
+					<span class="text">Spare coins appreciated:</span> <br>
+					BTC: <span class="hilite">1PfweVvZq4ZCo5SusTdBVpg8wud7oLs7c1</span><br>
+					LTC: <span class="hilite">LMFEaueLE1nHcJZuDzRBmpEUKHAAJDVo5e</span>
+				</div>
 
+				<div class="col-md-7">
+					<span class="text">
+						Made with
+						<span class="hilite">Node.js</span>,
+						<span class="hilite">Socket.io</span>,
+						<span class="hilite">MongoDb</span>,
+						<span class="hilite">Bootstrap</span>,
+						<span class="hilite">Angularjs</span>,
+						<span class="hilite">D3</span> and
+						<span class="hilite">Moment.js</span>
+					</span>
+					<br>
+					<span class="text">Hire me for production quality JavaScript:
+						<a href="http://stackoverflow.com/users/272924/dark-ruby"><span class="hilite">StackOverflow</span></a>
+						<a href="https://github.com/venil7"><span class="hilite">Github</span></a>
+					</span>
+
+				</div>
+			</div>
 		</div>
 	</div>
 
