--- a/web/index.html
+++ b/web/index.html
@@ -13,8 +13,8 @@
 
 			<div class="jumbotron">
 				<div class="row">
-					<div class="col-md-4 col-md-offset-8">
-						<h1 class="_3d">CoinGraph</h1>
+					<div class="col-md-4 col-md-offset-6">
+						<h1 class="_3d">CoinTracker</h1>
 					</div>
 				</div>
 				<div id="chart">
