--- a/web/index.html
+++ b/web/index.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" href="styles/bootstrap.min.css" production-href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
 	<link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Play' type='text/css'>
 	<link rel='stylesheet' href='styles/style.css' type='text/css'>
-	<title>CoinGraph</title>
+	<title>CoinTracker</title>
 </head>
 <body>
 
