--- a/web/index.html
+++ b/web/index.html
@@ -1,49 +1,50 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" ng-app="coingraph">
 <head>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="styles/bootstrap.min.css" production-href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
 	<link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Play' type='text/css'>
 	<link rel='stylesheet' href='styles/style.css' type='text/css'>
-	<title>CoinTracker</title>
+	<title coin-title="CoinTracker"></title>
 </head>
 <body>
 
-	<div class="container" ng-app="coingraph" ng-controller="chartController">
+	<div class="container">
 
-			<div class="jumbotron">
-				<div class="row">
-					<div class="col-md-4 col-md-offset-6">
-						<h1 class="_3d">CoinTracker</h1>
+		<div class="jumbotron" ng-controller="chartCtl">
+			<div class="row">
+				<div class="col-md-4 col-md-offset-6">
+					<h1 class="_3d">CoinTracker</h1>
+				</div>
+			</div>
+			<div id="chart">
+				<linechart data="chartData" options="chartOptions"></linechart>
+			</div>
+			<div class="row">
+				<div class="col-md-6 col-md-offset-1">
+					<div class="btn-group btn-group-xs">
+			  		<button type="button" class="btn btn-default"
+				  		ng-repeat="(i, range) in ranges"
+				  		ng-click="$parent.state.range = range"
+				  		ng-class="{ 'btn-success': range == $parent.state.range }">
+				  			{{range.name}}
+					  </button>
 					</div>
 				</div>
-				<div id="chart">
-					<linechart data="chartData" options="chartOptions"></linechart>
-				</div>
-				<div class="row">
-					<div class="col-md-6 col-md-offset-1">
-						<div class="btn-group btn-group-xs">
-				  		<button type="button" class="btn btn-default"
-					  		ng-repeat="(i, range) in ranges"
-					  		ng-click="$parent.state.range = range"
-					  		ng-class="{ 'btn-success': range == $parent.state.range }">
-					  			{{range.name}}
-						  </button>
-						</div>
-					</div>
 
-					<div class="col-md-4">
-						<div class="btn-group btn-group-xs">
-							<button type="button" class="btn btn-default"
-					  		ng-repeat="(i, symbol) in symbols"
-					  		ng-click="$parent.state.symbol = symbol"
-					  		ng-class="{ 'btn-success': symbol == $parent.state.symbol }">
-					  			{{symbol.name}}
-			  			</button>
-						</div>
+				<div class="col-md-4">
+					<div class="btn-group btn-group-xs">
+						<button type="button" class="btn btn-default"
+				  		ng-repeat="(i, symbol) in symbols"
+				  		ng-click="$parent.state.symbol = symbol"
+				  		ng-class="{ 'btn-success': symbol == $parent.state.symbol }">
+				  			{{symbol.name}}
+		  			</button>
 					</div>
 				</div>
 			</div>
+		</div>
+
 		<div class="row">
 			<div class="well well-lg footer">
 				<div class="col-md-5">
