--- a/web/index.html
+++ b/web/index.html
@@ -13,8 +13,12 @@
 
 		<div class="jumbotron" ng-controller="chartCtl">
 			<div class="row">
-				<div class="col-md-4 col-md-offset-6">
-					<h1 class="_3d">CoinTracker</h1>
+				<div class="col-md-8 col-md-offset-1" ng-controller="instantUpdateCtl">
+					<h3 class="_3d">
+						{{state.symbol.name}}:
+						<span class="buy">{{latest[state.symbol.pair].buy | number:3}}</span>
+						<span class="sell">{{latest[state.symbol.pair].sell | number:3}}</span>
+					</h3>
 				</div>
 			</div>
 			<div id="chart">
