--- a/web/index.html
+++ b/web/index.html
@@ -80,11 +80,14 @@
 	</div>
 
 	<script src="socket.io/socket.io.js"></script>
-	<script src="scripts/angular.min.js" production-src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.7/angular.min.js"></script>
+	
+	<!-- ref:js scripts/app.min.js?v<%= buildNumber %> -->
+	<script src="scripts/angular.min.js"></script>
 	<script src="scripts/d3.min.js"></script>
 	<script src="scripts/line-chart.min.js"></script>
 	<script src="scripts/moment.min.js"></script>
-	<script src="scripts/app.js" production-src="scripts/app.min.js"></script>
+	<script src="scripts/app.js"></script>
+	<!-- endref -->
 
 </body>
 </html>
