css deployment fixes

--- a/web/index.html
+++ b/web/index.html
@@ -2,7 +2,9 @@
 <html lang="en" ng-app="coingraph">
 <head>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" href="styles/bootstrap.min.css" production-href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
+	<!-- ref:css //netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css -->
+	<link rel="stylesheet" href="styles/bootstrap.min.css">
+	<!-- endref -->
 	<link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Play' type='text/css'>
 	<link rel='stylesheet' href='styles/style.css' type='text/css'>
 	<title coin-title="CoinTracker"></title>
